--- a/index4.html
+++ b/index4.html
@@ -54,7 +54,7 @@
 						</div>
 					</li>
 <li>
-						<a href="www.ahabbscience.weebly.com" target="_blank"><img src="images/weebly.jpg" height="420px" width="750px" alt="image1"/></a>
+						<a href="http://www.ahabbscience.weebly.com" target="_blank"><img src="images/weebly.jpg" height="420px" width="750px" alt="image1"/></a>
 						<div class="sb-description">
 							<h3>For more projects visit Ahabbscience Studio weebly website.</h3>
 						</div>
