--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h6::selection {
 											<li><a href="#one">About</a></li>
 											<li><a href="#profiles">Profiles</a></li>
 											<li><a href="#portfolio">Portfolio</a></li>
-											<li><a href="www.ahabbscience.weebly.com">ASP Weebly Site</a></li>
+											<li><a href="https://www.ahabbscience.weebly.com">ASP Weebly Site</a></li>
 										</ul>
 									</div>
 								</li>
@@ -107,6 +107,15 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 
 }
 </style>
+		
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript"> 
+      $(document).ready( function() {
+        $('#deletesuccess').delay(1000).fadeOut();
+      });
+  </script>
+
+		
 </head>
 <body>
 <strong><i>
@@ -195,7 +204,7 @@ overflow: hidden;
 								<h2>Ahabbscience Studio<br />
 								Weebly Website</h2>
 								<p>For more information and updates visit our old website.</p>
-<a href="www.ahabbscience.weebly.com" class="button primary">Visit it</a>
+<a href="https://www.ahabbscience.weebly.com" class="button primary">Visit it</a>
 							</ul>
 					
 							</div>
@@ -297,7 +306,7 @@ overflow: hidden;
 
 
 						<ul class="copyright">
-							<li>&copy; Ahabbscience Studio Pakistan 2018</li><li>Powered by <a href="www.ahabbscience.weebly.com">Ahabbscience Studio</a></li>
+							<li>&copy; Ahabbscience Studio Pakistan 2018</li><li>Powered by <a href="https://www.ahabbscience.weebly.com">Ahabbscience Studio</a></li>
 						</ul>
 					</footer>
 
