--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h6::selection {
 </style>
 
 	</head>
-	<body class="landing is-preload">
+	<body class="landing">
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
@@ -107,13 +107,7 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 
 }
 </style>
-		
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-    <script type="text/javascript"> 
-      $(document).ready( function() {
-        $('#deletesuccess').delay(1000).fadeOut();
-      });
-  </script>
+	
 
 		
 </head>
