--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h6::selection {
 											<li><a href="#one">About</a></li>
 											<li><a href="#profiles">Profiles</a></li>
 											<li><a href="#portfolio">Portfolio</a></li>
-											<li><a href="https://www.ahabbscience.weebly.com">ASP Weebly Site</a></li>
+											<li><a href="https://ahabbscience.weebly.com">ASP Weebly Site</a></li>
 										</ul>
 									</div>
 								</li>
@@ -73,7 +73,7 @@ h6::selection {
 
 					<section id="banner">
 						<center>
-<img src="images/Ahabbscience.jpg" width="80px" height="80px">
+<img src="images/Ahabbscience.jpg" width="78px" height="80px">
 </center>
 
 						<div class="inner">
@@ -132,7 +132,7 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 <center>
 <img src="images/Start.jpg" width="100" height="100">			</center>				
 <h2>About Ahabbscience Studio</h2>
-								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares.<br>Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
+								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares.<br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
 							</header>
 													</div>
 					</section>
@@ -198,7 +198,7 @@ overflow: hidden;
 								<h2>Ahabbscience Studio<br />
 								Weebly Website</h2>
 								<p>For more information and updates visit our old website.</p>
-<a href="https://www.ahabbscience.weebly.com" class="button primary">Visit it</a>
+<a href="https://ahabbscience.weebly.com" class="button primary">Visit it</a>
 							</ul>
 					
 							</div>
@@ -300,7 +300,7 @@ overflow: hidden;
 
 
 						<ul class="copyright">
-							<li>&copy; Ahabbscience Studio Pakistan 2018</li><li>Powered by <a href="https://www.ahabbscience.weebly.com">Ahabbscience Studio</a></li>
+							<li>&copy; Ahabbscience Studio Pakistan 2018</li><li>Powered by <a href="https://ahabbscience.weebly.com">Ahabbscience Studio</a></li>
 						</ul>
 					</footer>
 
