--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 <center>
 <img src="images/Start.jpg" width="100" height="100">			</center>				
 <h2>About Ahabbscience Studio</h2>
-								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares.<br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
+								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make videos, documentaries, films, VR contents, and other interactive contents <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
 							</header>
 													</div>
 					</section>
