--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>   AOS.init(); </script>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Comfortaa:300|Permanent+Marker;300');
 </style>
@@ -130,12 +133,13 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 						<div class="inner">
 							<header class="major">
 <center>
+					<div data-aos="zoom-in" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="200">
 <img src="images/Start.jpg" width="100" height="100">			</center>				
 <h2>About Ahabbscience Studio</h2>
 								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make videos, documentaries, films, VR contents, and other interactive contents <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
 							</header>
 													</div>
-					</section>
+					</section></div>
 
 				<!-- Two -->
 									
