--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body onload="myFunction()" style="margin:0;">
 <div id="loader"></div>
-<div style="display:none;" id="" class="animate-bottom">
+<div style="display:none;" id="myDiv">
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
