--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 </head>
 <body onload="myFunction()" style="margin:0;">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>   AOS.init(); </script>
 <div id="loader"></div>
 <div style="display:none;" id="myDiv"><div data-aos="zoom-in" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="200">
 
