--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>   AOS.init(); </script>
 <div id="loader"></div>
-<div style="display:none;" id="myDiv"><div data-aos="zoom-in" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="200">
+<div style="display:none;" id="myDiv" class="animate-bottom"><div data-aos="zoom-in" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="200">
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
