--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body onload="myFunction()" style="margin:0;">
 	
 <div id="loader"></div>
-<div style="display:none;" id="myDiv" class="animate-bottom"><div data-aos="zoom-in" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="200">
+<div style="display:none;" id="myDiv" class="animate-bottom">
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
