--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@ overflow: hidden;
 <section>
 <section id="portfolio">
 						<div class="inner">
-							<header><br><br><br>
+							<br><br><br>
 <center>
-								<h2>Portfolio</h2>
+<header class="major">								<h2>Portfolio</h2>
 								<p>Some of the work that we have done, or projects on which we are working. Clickable images for details.</p></center>
 							</header>
 					
@@ -286,6 +286,31 @@ overflow: hidden;
 <embed src="index4.html" height="680px" width="100%"></iframe>
 </div>
 </section>
+	
+	<section class="wrapper">
+						<div class="inner">
+</header>
+							<ul class="features">
+											
+<div class="row count">
+        <div data-aos="fade-left" class="col-sm-3 col-xs-6 wow fadeInLeft animated" data-wow-duration="1000ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 300ms; animation-name: fadeInLeft;">
+          <i class="fa fa-globe fa-5x"></i>
+          <h2 class="timer">8</h2>
+          <h6>Websites</h6>
+        </div>
+        <div data-aos="fade-right" class="col-sm-3 col-xs-6 wow fadeInLeft animated" data-wow-duration="1000ms" data-wow-delay="500ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 500ms; animation-name: fadeInLeft;">
+          <i class="fa fa-desktop fa-5x"></i>
+          <h2 class="timer">6</h2>                    
+          <h6>Games/Softwares</h6>
+        </div> 
+        <div data-aos="fade-up" class="col-sm-3 col-xs-6 wow fadeInLeft animated" data-wow-duration="1000ms" data-wow-delay="700ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 700ms; animation-name: fadeInLeft;">
+          <i class="fa fa-youtube fa-5x"></i>
+          <h2 class="timer">46</h2>                    
+          <h6>Youtube Uploads</h6>
+        </div>       </div>
+
+</section>
+
 
 
 
