--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ overflow: hidden;
 						<div class="inner">
 							<br><br><br>
 <center>
-<header class="major">								<h2>Portfolio</h2>
+								<h2>Portfolio</h2>
 								<p>Some of the work that we have done, or projects on which we are working. Clickable images for details.</p></center>
 							</header>
 					
