--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
 <link rel="shortcut icon" href="favicon.ico"> 
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
+
 <body onload="myFunction()" style="margin:0;">
-	
 <div id="loader"></div>
 <div style="display:none;" id="myDiv" class="animate-bottom">
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-	<script>   AOS.init(); </script>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Comfortaa:300|Permanent+Marker;300');
 </style>
@@ -45,11 +41,12 @@ h6::selection {
   background: lightgreen;
 }
 </style>
-
 	</head>
-	<body class="landing">
-
-		<!-- Page Wrapper -->
+  
+	<body>
+</body>
+<body class="landing">
+<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
 				<!-- Header -->
@@ -74,13 +71,13 @@ h6::selection {
 					</header>
 
 				<!-- Banner -->
-
 					<section id="banner">
-						<center>
-<img src="images/Ahabbscience.jpg" width="78px" height="80px">
+<center>
+<img src="images/Ahabbscience.jpg" width="80px" height="80px">
 </center>
 
 						<div class="inner">
+
 							<h2>Ahabbscience Studio</h2>
 
 						<style>
@@ -111,9 +108,6 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 
 }
 </style>
-	
-
-		
 </head>
 <body>
 <strong><i>
@@ -134,13 +128,12 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 						<div class="inner">
 							<header class="major">
 <center>
-					<div data-aos="zoom-in" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="200">
 <img src="images/Start.jpg" width="100" height="100">			</center>				
 <h2>About Ahabbscience Studio</h2>
 								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make videos, documentaries, films, VR contents, and other interactive contents. <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
 							</header>
 													</div>
-					</section></div>
+					</section>
 
 				<!-- Two -->
 									
@@ -272,7 +265,7 @@ overflow: hidden;
 						<div class="inner">
 							<br><br><br>
 <center>
-	<header>
+	<header class="major">
 								<h2>Portfolio</h2>
 								<p>Some of the work that we have done, or projects on which we are working. Clickable images for details.</p></center>
 							</header>
@@ -287,7 +280,8 @@ overflow: hidden;
 <embed src="index4.html" height="680px" width="100%"></iframe>
 </div>
 </section>
-	<section class="wrapper">
+
+<section class="wrapper">
 						<div class="inner">
 </header>
 							<ul class="features">
@@ -310,8 +304,6 @@ overflow: hidden;
         </div>       </div>
 
 </section>
-
-	
 
 
 
