--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ h6::selection {
   background: lightgreen;
 }
 </style>
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 	</head>
   
 	<body>
@@ -127,8 +132,8 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-<center>
-<img src="images/Start.jpg" width="100" height="100">			</center>				
+<center><div data-aos="zoom-in-up"></div>
+<img src="images/Start.jpg" width="100" height="100">			</center></div>				
 <h2>About Ahabbscience Studio</h2>
 								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make videos, documentaries, films, VR contents, and other interactive contents. <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
 							</header>
