--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 <link rel="shortcut icon" href="favicon.ico"> 
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<script>
+  AOS.init();
+</script>
 </head>
 
 <body onload="myFunction()" style="margin:0;">
