--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
 <body onload="myFunction()" style="margin:0;">
 <div id="loader"></div>
 <div style="display:none;" id="myDiv" class="animate-bottom">
-	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+	
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 <style>
@@ -77,7 +73,14 @@ h6::selection {
 					</header>
 
 				<!-- Banner -->
-					<section id="banner">
+
+			<section id="banner">
+				
+				<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 <center>
 <img src="images/Ahabbscience.jpg" width="80px" height="80px">
 </center>
@@ -131,7 +134,7 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
-						<div class="inner">
+						<div data-aos="zoom-in-left" class="inner">
 							<header class="major">
 <center>
 <img src="images/Start.jpg" width="100" height="100">			</center>				
