--- a/index.html
+++ b/index.html
@@ -135,9 +135,11 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div data-aos="zoom-in-left" class="inner">
-							<header class="major">
+
+						<header class="major">
+<div data-aos="zoom-in-left">							
 <center>
-<img src="images/Start.jpg" width="100" height="100">			</center>				
+<img src="images/Start.jpg" width="100" height="100">			</center></div>				
 <h2>About Ahabbscience Studio</h2>
 								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make videos, documentaries, films, VR contents, and other interactive contents. <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
 							</header>
