--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 
 						<header class="major">							
 <center>
-<img data-aos="zoom-in-left src="images/Start.jpg" width="100" height="100">			</center>			
+	<div data-aos="zoom-in-left">
+<img src="images/Start.jpg" width="100" height="100"></div>			</center>			
 <h2>About Ahabbscience Studio</h2>
 								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make videos, documentaries, films, VR contents, and other interactive contents. <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
 							</header>
