--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ h6::selection {
 											<li><a href="#profiles">Profiles</a></li>
 											<li><a href="#portfolio">Portfolio</a></li>
 											<li><a href="https://ahabbscience.weebly.com">ASP Weebly Site</a></li>
+											<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSehjVHxlt_EBZtwighc5e6h-fKLytpS5ve02rDbKwvp3ZxyRQ/viewform?usp=sf_link">Contact</a></li>
 										</ul>
 									</div>
 								</li>
