--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 		
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96275693-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-96275693-5');
+</script>
+
 		
 </head>
 
