--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ overflow: hidden;
 						<ul class="icons">
 														<li><a href="https://www.facebook.com/ahabbsciencestudiopak/?ref=page_internal" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/ahabb_sheraz/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-														<li><a href="ahabbscience@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+														<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSehjVHxlt_EBZtwighc5e6h-fKLytpS5ve02rDbKwvp3ZxyRQ/viewform?usp=sf_link" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 <li><a href="https://www.youtube.com/channel/UCLufwjxC5jQo3d1L9JmeZxg/featured" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
 
 						</ul>
