--- a/index.html
+++ b/index.html
@@ -334,6 +334,10 @@ overflow: hidden;
 
 				<!-- Footer -->
 					<footer id="footer">
+						<ul class="actions special">
+
+<a href="#banner" class="button fit">Back to top</a>
+</ul>
 						<ul class="icons">
 														<li><a href="https://www.facebook.com/ahabbsciencestudiopak/?ref=page_internal" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/ahabb_sheraz/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
