--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name="keywords" content="Pakistan, Ahabbscience Studio, Ahabbscience Studio Pakistan, Software house, Education, Youtube Channel, Facebook Page, Company, studio" />
 		<meta name="author" content="Ahabbscience Studio Pakistan" />
 <link rel="shortcut icon" href="favicon.ico"> 
-
+<meta name="theme-color" content="#00ffb2" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 		
 <!-- Global site tag (gtag.js) - Google Analytics -->
