--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@ overflow: hidden;
 						<div class="inner">
 </header>
 							<ul class="features">
-	<center>										
-<div class="row count">
+											
+<div class="row count"><center>
         <div data-aos="fade-left" class="col-sm-3 col-xs-6 wow fadeInLeft animated" data-wow-duration="1000ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 300ms; animation-name: fadeInLeft;">
           <i class="fa fa-globe fa-5x"></i>
           <h2 class="timer">8</h2>
@@ -322,7 +322,8 @@ overflow: hidden;
           <i class="fa fa-youtube fa-5x"></i>
           <h2 class="timer">46</h2>                    
           <h6>Youtube Uploads</h6>
-        </div>    </center>   </div>
+		</center>
+        </div>  </div>
 
 </section>
 
