--- a/index4.html
+++ b/index4.html
@@ -128,7 +128,7 @@
 <div>
 <link rel="stylesheet" href="css1/style.css">
 
-<body>
+<body></center>
 
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
