--- a/index4.html
+++ b/index4.html
@@ -65,7 +65,7 @@
 		<script type="text/javascript" src="js/modernizr.custom.46884.js"></script>
 	</head>
 	<body onload="myFunction()" style="margin:0;">
-
+</center>
 <div id="loader"></div>
 
 <div style="display:none;" id="myDiv" class="animate-bottom">
@@ -128,7 +128,7 @@
 <div>
 <link rel="stylesheet" href="css1/style.css">
 
-<body></center>
+<body>
 
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
