--- a/index4.html
+++ b/index4.html
@@ -68,7 +68,7 @@
 </center>
 <div id="loader"></div>
 
-<div style="display:none;" id="myDiv" class="animate-bottom">
+<div style="display:none;" class="animate-bottom">
 	
 			<div class="wrapper">
 
