--- a/index4.html
+++ b/index4.html
@@ -56,7 +56,7 @@
 
 #myDiv {
   display: none;
-  text-align: center;
+  text-align: ;
 }
 </style>
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
@@ -68,7 +68,7 @@
 </center>
 <div id="loader"></div>
 
-<div style="display:none;" class="animate-bottom">
+<div id="myDiv" style="display:none;" class="animate-bottom">
 	
 			<div class="wrapper">
 
