--- a/index4.html
+++ b/index4.html
@@ -56,7 +56,7 @@
 
 #myDiv {
   display: none;
-  text-align: left;
+  text-align: center;
 }
 </style>
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
