--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ h6::selection {
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="#one">About</a></li>
-											<li><a href="#profiles">Profiles</a></li>
-											<li><a href="#portfolio">Portfolio</a></li>
+											<li><a href="#one" class="more scrolly">About</a></li>
+											<li><a href="#profiles" class="more scrolly">Profiles</a></li>
+											<li><a href="#portfolio" class="more scrolly">Portfolio</a></li>
 											<li><a href="https://ahabbscience.weebly.com">ASP Weebly Site</a></li>
 											<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSehjVHxlt_EBZtwighc5e6h-fKLytpS5ve02rDbKwvp3ZxyRQ/viewform?usp=sf_link">Contact</a></li>
 										</ul>
