--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ overflow: hidden;
 <div>
 						<div class="inner">
 <br><div>
-<embed src="index4.html" height="680px" width="100%"></iframe>
+<iframe src="index4.html" height="680px" width="100%"></iframe>
 </div>
 </section>
 
