--- a/index4.html
+++ b/index4.html
@@ -72,12 +72,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background: url("http://www.philippefercha.com/cd/toggle-menu-bg.jpg") no-repeat;
-  background-size: 2000px;
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-}
-
 a {
   display: block;
   width: 100%;
@@ -226,13 +220,13 @@ a {
 
 <div id="myDiv" style="display:none;" class="animate-bottom">
 	
-	<link rel="stylesheet" href="style.css">
+	
   <nav class="menu-opener">
     <div class="menu-opener-inner"></div>
   </nav>
   <nav class="menu">
     <ul class="menu-inner">
-      <a href="https://ahabbsciencestudiopak.github.io/Science-and-Technology-in-Pakistan/">
+      <a href="https://ahabbsciencestudiopak.github.io/Science-and-Technology-in-Pakistan/" class="menu-link">
         <li>S&T in Pakistan (Website)</li>
       </a>
       <a href="https://ahabbsciencestudiopak.github.io/My-Solar-Sail/" class="menu-link">
@@ -241,7 +235,7 @@ a {
       <a href="https://ahabb-school-portfolio.firebaseapp.com/" class="menu-link">
         <li>My School Portfolio (Website)</li>
       </a>
-      <a href="#" class="menu-link">
+      <a href="https://gamejolt.com/games/caristan-hub-techdemo-by-ahabbscience-studio/48414" class="menu-link">
         <li>Caristan Hub (Game)</li>
       </a>
       <a href="https://ahabbsciencestudiopak.github.io/Virtual-Pakistan-Site/?i=1" class="menu-link">
