--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<title>Ahabbscience Studio by M. Ahabb Sheraz</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<meta name="description" content="Ahabbscience Studio Official Website. Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz." />
+<meta name="description" content="Ahabbscience Studio Official Website. Ahabbscience Studio is a Pakistani indie educational software developing studio, and Digital studio which is owned and is being runned by Muhammad Ahabb Sheraz." />
         <meta name="keywords" content="Pakistan, Ahabbscience Studio, Ahabbscience Studio Pakistan, Software house, Education, Youtube Channel, Facebook Page, Company, studio" />
 		<meta name="author" content="Ahabbscience Studio Pakistan" />
 <link rel="shortcut icon" href="favicon.ico"> 
@@ -294,7 +294,7 @@ h6 {
 </html><br />
 
 
-Ahabbscience Studio is a Pakistani indie educational software developing studio.<br />
+Ahabbscience Studio is a Pakistani indie educational software developing digital studio.<br />
 </html><html><body>
 
 <style>
@@ -328,7 +328,7 @@ Ahabbscience Studio is a Pakistani indie educational software developing studio.
 <center>
 <img src="images/Start.jpg" width="100" height="100">			</center>			
 <h2>About Ahabbscience Studio</h2>
-								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make videos, documentaries, films, VR contents, and other interactive contents. <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
+								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio, and Digital studio which is owned and is being runned by Muhammad Ahabb Sheraz. We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make websites, videos, documentaries, films, VR contents, and other interactive contents. <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
 							</header>
 													</div>
 					</section>
