--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ h6::selection {
   AOS.init();
 </script>
 <center>
-<img src="images/Ahabbscience.jpg" width="80px" height="80px">
+<img src="images/Ahabbscience Studio.png" width="80px" height="80px">
 </center>
 
 						<div class="inner">
