--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Comfortaa:300|Permanent+Marker;300');
+@import url('https://fonts.googleapis.com/css?family=Muli|Noto+Sans|Noto+Sans+JP|Nunito|Ubuntu&display=swap');
 </style>
 <style>
 p::selection {
@@ -300,7 +301,7 @@ Ahabbscience Studio is a Pakistani indie educational software developing digital
 <style>
 							p {
     color: white;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Nunito', sans-serif;
     font-size: 100%;
 
 }
@@ -497,7 +498,7 @@ overflow: hidden;
         </div> 
         <div data-aos="fade-up" class="col-sm-3 col-xs-6 wow fadeInLeft animated" data-wow-duration="1000ms" data-wow-delay="700ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 700ms; animation-name: fadeInLeft;">
           <i class="fa fa-youtube fa-5x"></i>
-          <h2 class="timer">46</h2>                    
+          <h2 class="timer">50+</h2>                    
           <h6>Youtube Uploads</h6>
 		</center>
         </div>  </div>
@@ -526,7 +527,7 @@ overflow: hidden;
 
 
 						<ul class="copyright">
-							<li>&copy; Ahabbscience Studio Pakistan 2018</li><li>Powered by <a href="https://ahabbscience.weebly.com">Ahabbscience Studio</a></li>
+							<li>&copy; Ahabbscience Studio Pakistan 2019-2020</li><li>Powered by <a href="https://ahabbscience.weebly.com">Ahabbscience Studio</a></li>
 						</ul>
 					</footer>
 
