--- a/index.html
+++ b/index.html
@@ -294,10 +294,17 @@ h6 {
 </body>
 </html><br />
 
+<style>
+							p {
+    color: white;
+    font-family: 'Nunito', sans-serif;
+    font-size: 100%;
 
+}
+</style>
 Ahabbscience Studio is a Pakistani indie educational software developing digital studio.<br />
 </html><html><body>
-
+</body>
 <style>
 							p {
     color: white;
