--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@ h6 {
 </html><br />
 
 <style>
-							p {
+{						p {
     color: white;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     font-size: 100%;
 
 }
 </style>
-Ahabbscience Studio is a Pakistani indie educational software developing digital studio.<br />
+<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.</p><br />
 </html><html><body>
 </body>
 <style>
