--- a/index.html
+++ b/index.html
@@ -298,13 +298,13 @@ h6 {
 {						p {
     color: white;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 100%;
+    font-size: ;
 
 }
 </style>
-<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.</p><br />
-</html><html><body>
-</body>
+<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.</p>
+</body></html><html><body>
+
 <style>
 							p {
     color: white;
