--- a/index.html
+++ b/index.html
@@ -304,7 +304,6 @@ h6 {
 </style>
 <p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.</p>
 </body></html><html><body>
-
 <style>
 							p {
     color: white;
@@ -315,8 +314,8 @@ h6 {
 </style>
 </head>
 <body>
-<strong><i>
-<p>Knowledge through Content Creation</p></i></strong>
+<i>
+<p>Knowledge through Content Creation</p></i>
 
 </body>
 </html><br />
