--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@ h6 {
 
 }
 </style>
-<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.</p>
-</body></html><html><body>
+<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.<br><i><strong>Knowledge through Content Creation</strong></i></p></body></html><html><body>
 <style>
 							p {
     color: white;
@@ -314,8 +313,6 @@ h6 {
 </style>
 </head>
 <body>
-<i>
-<p>Knowledge through Content Creation</p></i>
 
 </body>
 </html><br />
