--- a/index.html
+++ b/index.html
@@ -302,7 +302,9 @@ h6 {
 
 }
 </style>
-<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.<br /><i><strong>Knowledge through Content Creation</strong></i></p></body></html><html><body>
+<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.<br />
+
+<i><strong>Knowledge through Content Creation</strong></i></p></body></html><html><body>
 <style>
 							p {
     color: white;
