--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ h6 {
 }
 </style>
 <p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.</p>
-<p><i><strong>Knowledge through Content Creation</strong></i></p></body></html><html><body>
+<p><i> Knowledge through Content Creation</i></p></body></html><html><body>
 <style>
 							p {
     color: white;
