--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@ h6 {
 
 }
 </style>
-<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio.</p>
-<p><i> Knowledge through Content Creation</i></p></body></html><html><body>
+<p>Ahabbscience Studio is a Pakistani indie educational software developing digital studio. <strong>Knowledge through Content Creation</strong></p></body></html><html><body>
 <style>
 							p {
     color: white;
