--- a/index.html
+++ b/index.html
@@ -332,8 +332,16 @@ h6 {
 <center>
 <img src="images/Start.jpg" width="100" height="100">			</center>			
 <h2>About Ahabbscience Studio</h2>
-								<p>Ahabbscience Studio is a Pakistani indie educational software developing studio, and Digital studio which is owned and is being runned by Muhammad Ahabb Sheraz (a 15 year old). We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make websites, videos, documentaries, films, VR contents, and other interactive contents. <br> Ahabbscience Studio = Muhammad Ahabb Sheraz </p>
-							</header>
+												<style>
+							span {
+    color: white;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 100%;
+
+}
+</style>
+							<div><span>Ahabbscience Studio is a Pakistani indie educational software developing studio, and Digital studio which is owned and is being runned by Muhammad Ahabb Sheraz (a 15 year old). We try to innovate in what we do and try to find out new ways to spread knowledge via content creation or by making softwares. We make websites, videos, documentaries, films, VR contents, and other interactive contents. <br> Ahabbscience Studio = Muhammad Ahabb Sheraz</span></div>
+						</header>
 													</div>
 					</section>
 
