--- a/index.html
+++ b/index.html
@@ -359,10 +359,9 @@ h6 {
 <section id="two" class="wrapper alt style2">
 
 <section class="spotlight">
-
-
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>							<div class="image"><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><div class='embed-container'>
-<iframe id="youtube_video" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+<div class="image">
+<iframe id="youtube_video" width="100%" height="220px" frameborder="0" allowfullscreen></iframe></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <script>
 var channelID = "UCLufwjxC5jQo3d1L9JmeZxg";
@@ -371,7 +370,7 @@ $.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtub
    var id = link.substr(link.indexOf("=")+1);
     $("#youtube_video").attr("src","https://youtube.com/embed/"+id + "?controls=0&showinfo=0&rel=0");
 });
-</script></div><div class="content"></div>
+</script><div class="content">
 <h2>Ahabbscience Studio<br />
 								 on YouTube</h2>
 								<p>Catch the latest videos on our Youtube Channel and Subscribe our channel so that you never miss an update. The above video was uploaded recently by Ahabbscience Studio as this section will automatically update whenever we upload a new video on Youtube.</p>
@@ -382,17 +381,9 @@ $.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtub
 
 </section>
 														<section class="spotlight">
-							<div class="image"><div class="iframe_div">    
-    <div><style>
-.post-container {
-position: relative;
-padding-bottom: 56.25%;
-padding-top: 35px;
-height: 0;
-overflow: hidden;
-}
-</style>	
-<iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fahabbsciencestudiopak&width=600&colorscheme=light&show_faces=true&border_color&stream=true&header=true&height=435" scrolling="yes" style="border:none; overflow:hidden; width:100%; height:300px; background: white; float:left; " allowtransparency="false" frameborder="0"></iframe><div class="content"></div>
+							<div class="image"><iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fahabbsciencestudiopak&width=600&colorscheme=light&show_faces=true&border_color&stream=true&header=true&height=435" scrolling="yes" style="border:none; overflow:hidden; width:100%; height:300px; background: white; float:left; " allowtransparency="false" frameborder="0"></iframe></div>
+								
+								<div class="content">
 								<h2>Ahabbscience Studio<br />
 								on Facebook</h2>
 								<p>Like and follow Ahabbscience Studio's Official Facebook page.</p>
